--- a/index.html
+++ b/index.html
@@ -13,18 +13,14 @@
       gtag('js', new Date());
       gtag('config', 'AW-10782185640');
 
-      // gtag_report_conversion function for tracking and dialing
-      function gtag_report_conversion(phoneNumber) {
-        var callback = function () {
-          // Once conversion event is sent, initiate the call
-          window.location.href = 'tel:+' + phoneNumber.replace(/\D/g, ''); // Clean number for dialing
-        };
+      // gtag_report_conversion function to track clicks on phone numbers
+      // This function will send the conversion event to Google Ads.
+      // The actual call will be handled by the tel: link in the anchor tag.
+      function gtag_report_conversion() {
         gtag('event', 'conversion', {
-            'send_to': 'AW-10782185640/PPImCJ-a7eIaEKixrJUo', // Your Website Call conversion ID
-            'event_callback': callback,
-            'phone_number': phoneNumber.replace(/\D/g, '') // Pass the number for Google's internal tracking
+            'send_to': 'AW-10782185640/PPImCJ-a7eIaEKixrJUo' // Your Website Call conversion ID
         });
-        return false; // Prevent default link action
+        // No 'return false;' here, allow the default link action (tel: link) to proceed.
       }
     </script>
     <!-- Google tag (gtag.js) - END -->
@@ -38,26 +34,6 @@
       // that have the 'goog-inline-block_fallback' class and a 'data-tel' attribute.
     </script>
     <!-- Phone snippet - Website phone calls - END -->
-
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            // Get all elements that Google should dynamically swap and track
-            const trackableCallElements = document.querySelectorAll('.goog-inline-block_fallback');
-
-            trackableCallElements.forEach(element => {
-                element.addEventListener('click', (e) => {
-                    e.preventDefault(); // Prevent the default link behavior immediately
-
-                    // Get the currently displayed number (which should be Google's forwarding number if swapped)
-                    const displayedNumber = element.innerText || element.dataset.tel; 
-
-                    // Fire the conversion event and then make the call
-                    // This uses the gtag_report_conversion function defined above.
-                    gtag_report_conversion(displayedNumber);
-                });
-            });
-        });
-    </script>
 
     <!-- Tailwind CSS CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -225,7 +201,7 @@
             justify-content: center;
             transition: background-color 0.3s ease, transform 0.2s ease, box-shadow 0.3s ease;
             box-shadow: 0 8px 15px rgba(255, 193, 7, 0.4); /* Glow effect */
-            text-decoration: none; 
+            text-decoration: none;
             text-transform: uppercase;
             letter-spacing: 0.08em;
             border: 3px solid #ffeb3b; /* Stronger border */
@@ -278,7 +254,7 @@
             justify-content: center;
             transition: background-color 0.3s ease, transform 0.2s ease;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            text-decoration: none; 
+            text-decoration: none;
             text-transform: uppercase;
             letter-spacing: 0.05em;
             margin-top: 1.5rem; /* Space from text above */
@@ -303,12 +279,11 @@
             </h1>
         </div>
         <!-- Phone Number - Dynamically replaceable by Google for tracking -->
-        <!-- This <a> tag now has no href, its click is managed by JS to ensure tracking -->
-        <a class="text-xl md:text-2xl font-bold text-green-400 hover:text-green-300 transition-colors duration-200 flex items-center goog-inline-block_fallback" data-tel="4052955189">
+        <a href="tel:+1405295189" class="text-xl md:text-2xl font-bold text-green-400 hover:text-green-300 transition-colors duration-200 flex items-center" onclick="gtag_report_conversion();">
             <svg class="w-6 h-6 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path>
             </svg>
-            (405) 295-5189
+            <span class="goog-inline-block_fallback" data-tel="4052955189">(405) 295-5189</span>
         </a>
     </header>
 
@@ -322,13 +297,11 @@
             <p class="text-xl md:text-3xl text-gray-200 mb-10 drop-shadow-md">
                 We bring the showroom shine to your doorstep.
             </p>
-            <!-- Call Button -->
-            <!-- This <a> tag now has no href, its click is managed by JS to ensure tracking -->
-            <a class="btn-primary goog-inline-block_fallback" data-tel="4052955189">
+            <a href="tel:+1405295189" class="btn-primary" onclick="gtag_report_conversion();">
                 <svg class="w-7 h-7 mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path>
                 </svg>
-                Call for Instant Service!
+                <span class="goog-inline-block_fallback" data-tel="4052955189">Call for Instant Service!</span>
             </a>
         </div>
     </section>
@@ -355,12 +328,11 @@
                 Call NOW to unlock your <span class="text-red-400 line-through">$299</span> detail for just <span class="text-yellow-400">$249!</span>
             </p>
             <!-- Small Call Button -->
-            <!-- This <a> tag now has no href, its click is managed by JS to ensure tracking -->
-            <a class="btn-small-call goog-inline-block_fallback" data-tel="4052955189">
+            <a href="tel:+1405295189" class="btn-small-call" onclick="gtag_report_conversion();">
                 <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path>
                 </svg>
-                Call Now
+                <span class="goog-inline-block_fallback" data-tel="4052955189">Call Now</span>
             </a>
         </div>
     </section>
@@ -518,13 +490,11 @@
             Our schedule fills up fast! Lock in your premium mobile detailing appointment today.
         </p>
         <div class="flex flex-col md:flex-row justify-center items-center gap-6">
-            <!-- Call Us Now Button -->
-            <!-- This <a> tag now has no href, its click is managed by JS to ensure tracking -->
-            <a class="btn-call-now goog-inline-block_fallback" data-tel="4052955189">
+            <a href="tel:+1405295189" class="btn-call-now" onclick="gtag_report_conversion();">
                 <svg class="w-8 h-8 mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                     <path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path>
                 </svg>
-                Call Us Now!
+                <span class="goog-inline-block_fallback" data-tel="4052955189">Call Us Now!</span>
             </a>
         </div>
     </section>
@@ -590,7 +560,7 @@
 
                 // Using a custom modal message box instead of alert()
                 const messageBox = document.createElement('div');
-                messageBox.innerHTML = `
+            messageBox.innerHTML = `
                     <div style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: #333; color: white; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.5); z-index: 1000;">
                         <p style="font-size: 1.2em; margin-bottom: 15px;">Sorry, the special limited-time offer has expired. The price has reverted to $299.</p>
                         <button onclick="this.parentNode.remove()" style="background-color: #28a745; color: white; padding: 10px 20px; border: none; border-radius: 5px; cursor: pointer;">OK</button>
