--- a/index.html
+++ b/index.html
@@ -70,7 +70,8 @@
             background-size: cover;
             background-position: center;
             position: relative;
-            min-height: 80vh;
+            /* Reduced min-height for better mobile visibility of content below */
+            min-height: 60vh; /* Adjusted from 80vh */ 
             display: flex;
             align-items: center;
             justify-content: center;
@@ -118,8 +119,9 @@
         .btn-primary:active {
             transform: translateY(0);
         }
+        /* Increased font size for pricing highlight on all devices */
         .pricing-highlight {
-            font-size: 4rem;
+            font-size: 5rem; /* Adjusted from 4rem */
             font-weight: 800;
             color: #28a745;
             text-shadow: 0 0 10px rgba(40, 167, 69, 0.5);
@@ -132,7 +134,7 @@
         }
         @media (min-width: 768px) {
             .pricing-highlight {
-                font-size: 6rem;
+                font-size: 7rem; /* Adjusted from 6rem */
             }
         }
         .feature-list li {
@@ -287,24 +289,7 @@
         </a>
     </header>
 
-    <!-- Hero Section -->
-    <section class="hero-section">
-        <div class="hero-overlay"></div>
-        <div class="hero-content">
-            <h2 class="text-5xl md:text-7xl font-extrabold leading-tight mb-6 text-white tracking-tight drop-shadow-lg">
-                Premium Mobile Detailing in OKC
-            </h2>
-            <p class="text-xl md:text-3xl text-gray-200 mb-10 drop-shadow-md">
-                We bring the showroom shine to your doorstep.
-            </p>
-            <a href="tel:+14052955189" class="btn-primary">
-                <svg class="w-7 h-7 mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path></svg>
-                <span>Call for Instant Service!</span>
-            </a>
-        </div>
-    </section>
-
-    <!-- Pricing Section -->
+    <!-- Pricing Section (Moved higher) -->
     <section class="section-padding bg-gray-900 text-center rounded-xl mx-4 my-8 shadow-xl">
         <h3 class="text-4xl md:text-5xl font-bold text-white mb-6">
             Simple & Transparent Pricing
@@ -328,6 +313,23 @@
             <a href="tel:+14052955189" class="btn-small-call">
                 <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path></svg>
                 <span>Call Now</span>
+            </a>
+        </div>
+    </section>
+
+    <!-- Hero Section -->
+    <section class="hero-section">
+        <div class="hero-overlay"></div>
+        <div class="hero-content">
+            <h2 class="text-5xl md:text-7xl font-extrabold leading-tight mb-6 text-white tracking-tight drop-shadow-lg">
+                Premium Mobile Detailing in OKC
+            </h2>
+            <p class="text-xl md:text-3xl text-gray-200 mb-10 drop-shadow-md">
+                We bring the showroom shine to your doorstep.
+            </p>
+            <a href="tel:+14052955189" class="btn-primary">
+                <svg class="w-7 h-7 mr-3" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path d="M2 3a1 1 0 011-1h2.153a1 1 0 01.986.836l.74 4.435a1 1 0 01-.54 1.06l-1.548.774a11.037 11.037 0 006.105 6.105l.774-1.548a1 1 0 011.059-.54l4.435.74a1 1 0 01.836.986V17a1 1 0 01-1 1h-2C7.82 18 2 12.18 2 5V3z"></path></svg>
+                <span>Call for Instant Service!</span>
             </a>
         </div>
     </section>
